add clock picture

--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,7 @@
 	"web_accessible_resources": 
 	[
 		"images/robot-with-flower.png",
-		"images/clock.png"
+		"images/clock.png",
+		"images/clock-removebg.png"
 	]
 }
